--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,3 +93,5 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        build-args: |
+          VERSION=${{ steps.context.outputs.tag }}
