lock releaser at `v5`

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,11 @@
 builds:
-- goos:
+- env:
+  - CGO_ENABLED=0
+  ldflags:
+  - -extldflags "-static"
+  flags:
+  - -trimpath
+  goos:
   - linux
   - darwin
   goarch:
