correct goreleaser args + update output syntax

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,14 +51,14 @@ jobs:
 
       - name: Configure environment
         id: context
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
 
       - name: Release
         uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: latest
-          args: release --rm-dist
+          version: "~> v2"
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
